--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://lovecrafts.recruiterbox.com/jobs/fk03f1w'>
+    Content Coordinator - Internship at LoveCrafts
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://shijigroup.join.com/jobs/252054-sales-operations-intern-m-f-for-students-only'>Job @ Shiji (Berlin): Sales Operations Intern (m/f... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -85,7 +91,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caterwings.join.com/jobs/249137-internship-business-development-london-m-f-caterwings-rocket-internet'>Job @ CaterWings (London): Internship Business Dev... | JOIN</a></h5> 
+<h5><a href='https://caterwings.join.com/jobs/249137-internship-business-development-london-m-f-caterwings-rocket-internet'>Job @ CaterWings (London): Internship Business Dev... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -101,7 +107,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://launchmetrics.applytojob.com/apply/KzJnY0CMdP/Digital-Marketing-SEO-Content-Native-French-Internship'>Digital Marketing / SEO Content (Native French Internship) - Launchmetrics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://launchmetrics.applytojob.com/apply/KzJnY0CMdP/Digital-Marketing-SEO-Content-Native-French-Internship'>Digital Marketing / SEO Content (Native French Internship) - Launchmetrics - Career Page</a></h5> 
 <p><span class="badge badge-light">NYC Paris London Milan Los Angeles Tokyo Madrid</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -115,7 +121,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/rdi/jobs/fall-2019-web-dev-intern-angular-c-typescript-aKAZCgRJur6yCNaKld2Sj6'>[Fall 2019] Web Dev Intern (Angular/C#/Typescript) #0128 job at R&amp;D Industries, Inc. in Ames, IA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/rdi/jobs/fall-2019-web-dev-intern-angular-c-typescript-aKAZCgRJur6yCNaKld2Sj6'>[Fall 2019] Web Dev Intern (Angular/C#/Typescript) #0128 job at R&amp;D Industries, Inc. in Ames, IA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -127,7 +133,7 @@
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/agorize/7c5c9aa3-34da-4c78-9fe5-bcf4225359c7'>Agorize - Community Management Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/agorize/7c5c9aa3-34da-4c78-9fe5-bcf4225359c7'>Agorize - Community Management Intern</a></h5> 
 <p><span class="badge badge-light">Hong Kong</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -167,7 +173,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/atlassian/f6a34ac2-47ed-4221-bfd0-577b6ed5a29e'>Atlassian - Workplace Productivity Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/atlassian/f6a34ac2-47ed-4221-bfd0-577b6ed5a29e'>Atlassian - Workplace Productivity Intern</a></h5> 
 <p><span class="badge badge-light">Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -231,7 +237,7 @@
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787496'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787496'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -255,7 +261,7 @@
 <p><span class="badge badge-light">Texas, United States New York</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-fr/job/o3BCafwa'>Carri?res Trek Bicycle - Marketing Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-fr/job/o3BCafwa'>Carri?res Trek Bicycle - Marketing Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -287,7 +293,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4369984002'>Job Application for Internship in Payroll &amp; Accounting - German fluency required at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4369984002'>Job Application for Internship in Payroll &amp; Accounting - German fluency required at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -324,7 +330,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/devialet/job/ox6x9fw3'>Devialet Careers - Digital Marketing Assistant H/F - Internship</a></h5> 
+<h5><a href='https://jobs.jobvite.com/devialet/job/ox6x9fw3'>Devialet Careers - Digital Marketing Assistant H/F - Internship</a></h5> 
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -332,7 +338,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Santa Barbara</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/arkera/44d70e8e-1ab4-4bda-8c4b-dbbd2bb91b94'>Arkera - Emerging Markets Research Analyst Internship</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/arkera/44d70e8e-1ab4-4bda-8c4b-dbbd2bb91b94'>Arkera - Emerging Markets Research Analyst Internship</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -360,7 +366,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/curology/jobs/1786671'>Job Application for Marketing Intern (Acquisition) at Curology</a></h5> 
+<h5><a href='https://boards.greenhouse.io/curology/jobs/1786671'>Job Application for Marketing Intern (Acquisition) at Curology</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -374,7 +380,7 @@ Stuart.</p>
 <p><span class="badge badge-light">London, England, United Kingdom North America</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/binance/4f52690b-cb76-4c08-8e4c-631177716257'>Binance - Angel Manager- Internship</a></h5> 
+<h5><a href='https://jobs.lever.co/binance/4f52690b-cb76-4c08-8e4c-631177716257'>Binance - Angel Manager- Internship</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -398,7 +404,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://marketplacedistri.join.com/jobs/260211-internship-ppc-marketeer-for-fast-growing-startup-in-lucca-italy'>Job @ marketplacedistri (Lucca): Internship: PPC m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://marketplacedistri.join.com/jobs/260211-internship-ppc-marketeer-for-fast-growing-startup-in-lucca-italy'>Job @ marketplacedistri (Lucca): Internship: PPC m... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -406,7 +412,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://marketplacedistri.join.com/jobs/263290-internship-content-marketeer-de-in-lucca-tuscany-fast-growing-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
+<h5><a href='https://marketplacedistri.join.com/jobs/263290-internship-content-marketeer-de-in-lucca-tuscany-fast-growing-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -418,7 +424,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://marketplacedistri.join.com/jobs/259178-internship-result-driven-business-developer-with-a-drive-for-international-e-commerce'>Job @ marketplacedistri (Lucca): Internship: Resul... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://marketplacedistri.join.com/jobs/259178-internship-result-driven-business-developer-with-a-drive-for-international-e-commerce'>Job @ marketplacedistri (Lucca): Internship: Resul... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -453,10 +459,6 @@ Stuart.</p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 <h5><a href='http://unitednationsfoundation.applytojob.com/apply/O6zlurPjEk/Intern-Grassroots-Advocacy-ShotLife'>Intern, Grassroots Advocacy, Shot@Life - United Nations Foundation - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://unitednationsfoundation.applytojob.com/apply/Rorg8jvhMG/Intern-Communications-Global-Health'>Intern, Communications, Global Health - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
