--- a/data-science.html
+++ b/data-science.html
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -105,7 +105,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wellhealthinc/jobs/4367501002'>Job Application for Data Scientist at WELL Health Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wellhealthinc/jobs/4367501002'>Job Application for Data Scientist at WELL Health Inc.</a></h5> 
 <p><span class="badge badge-light">Santa Barbara</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -127,7 +127,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://medlanes.join.com/jobs/262494-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medlanes.join.com/jobs/262494-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -176,7 +176,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/fahrenheitgroup/job/m9rxxde3cbgujtcdsjz388ywdo'>Data Scientist (Ph.D) | The Fahrenheit Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/fahrenheitgroup/job/m9rxxde3cbgujtcdsjz388ywdo'>Data Scientist (Ph.D) | The Fahrenheit Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -196,7 +196,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/0455496B74'>Datatonic - Jobs: Data Science Lead - Apply online</a></h5> 
+<h5><a href='https://datatonic.workable.com/j/0455496B74'>Datatonic - Jobs: Data Science Lead - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -238,7 +238,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/datacamp/jobs/1788671'>Job Application for Part Time Data Science Program Lead  at DataCamp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/datacamp/jobs/1788671'>Job Application for Part Time Data Science Program Lead  at DataCamp</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -298,7 +298,7 @@ federal?...</p>
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KellyServicesEu/743999676244027-data-scientist-oncology'>Kelly Services Data Scientist - Oncology | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KellyServicesEu/743999676244027-data-scientist-oncology'>Kelly Services Data Scientist - Oncology | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -377,7 +377,7 @@ Marketing?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wholebiome/c295c90d-1f07-492e-b9be-12d5b6f72c32'>Whole Biome - Metabolic Pathways Genomic Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wholebiome/c295c90d-1f07-492e-b9be-12d5b6f72c32'>Whole Biome - Metabolic Pathways Genomic Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -418,7 +418,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/data-scientist-11648'>Data Scientist - Akamai Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/data-scientist-11648'>Data Scientist - Akamai Careers</a></h5> 
 <p><span class="badge badge-light">Cambridge Cambridge, MA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
