--- a/data-engineer.html
+++ b/data-engineer.html
@@ -48,9 +48,15 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-engineer-9706'>Data Engineer - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-engineer-9706'>Data Engineer - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
+<hr/>
+<h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/14854'>Data Engineer - CBS Interactive Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... Truly premium content. At true scale. Only CBSi. CBS Interactive is the premier 
+online content network for information and online operations of CBS Corporation
+?...</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/pac-12-networks/job/oiOCafwC'>Pac-12 Networks Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
@@ -180,7 +186,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Engineer at Monese.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://keywords-intl1.workable.com/j/120579048C'>Keywords Studios - Jobs: Big Data Engineer - Apply online</a></h5> 
+<h5><a href='https://keywords-intl1.workable.com/j/120579048C'>Keywords Studios - Jobs: Big Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -326,7 +332,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 online content network for information and online operations of CBS Corporation
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999692036613-senior-data-engineer'>Goldstone Partners, Inc. Senior Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999692036613-senior-data-engineer'>Goldstone Partners, Inc. Senior Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -403,7 +409,7 @@ TAL, Machine Learning, mod?lisation spatio-temporelle) qui seront mises en?...</
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/coinsquare/24df5360-e0c9-4f1a-a502-1318710e02f5'>Coinsquare - Director of Data Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/coinsquare/24df5360-e0c9-4f1a-a502-1318710e02f5'>Coinsquare - Director of Data Engineering</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -425,15 +431,15 @@ YOUR TEAM. The successful candidate will join the team responsible for the?...</
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nexgPKw5'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nexgPKw5'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/dZ5uI8fZ7Q/Data-Engineer'>Data Engineer - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/dZ5uI8fZ7Q/Data-Engineer'>Data Engineer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/fy1ggz64q6ti9gu37waej7dejh'>Senior Data Engineer (OTT Streaming Services) | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/fy1ggz64q6ti9gu37waej7dejh'>Senior Data Engineer (OTT Streaming Services) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -468,10 +474,6 @@ Atypon Systems.</p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/propellerhealth/jobs/1782267'>Job Application for Data Engineer at Propeller Health</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-19</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/advent-software/job/otVzafwR'>SS&amp;C Advent Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
